config/samples/ingress_sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-via-ingress
  namespace: default
spec:
  ingressClassName: cf-tunnel
  rules:
    - host: app.candeiasalexandre.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
